ajustes na resposividade e adição de features

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <main>
             <div id="imagem">
-                <img src="assets/avatar.png">
+                <img src="assets/avatar-light.png">
                 <p>@maykbrito</p>
             </div>
             <div id="switch" onclick="toggleMode()">
